--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         #root { min-height: 100vh; }
     </style>
     <script>
-      // Shim process.env for browser compatibility
-      window.process = window.process || { env: {} };
+      // Shim process.env for browser compatibility before any other scripts run
+      window.process = { env: { API_KEY: "" } };
     </script>
     <script type="importmap">
 {
@@ -24,7 +24,7 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "recharts": "https://esm.sh/recharts@3.6.0",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
