--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', 'PingFang SC', 'Microsoft YaHei', sans-serif; margin: 0; padding: 0; }
-        #root { min-height: 100vh; }
+        body { font-family: 'Inter', 'PingFang SC', 'Microsoft YaHei', sans-serif; margin: 0; padding: 0; overflow-x: hidden; }
+        #root { min-height: 100vh; display: flex; flex-direction: column; }
     </style>
     <script>
-      // Shim process.env for browser compatibility before any other scripts run
-      window.process = { env: { API_KEY: "" } };
+      // 更加稳健的 process 对象模拟，确保即使在某些受限环境下也不会崩溃
+      if (typeof window.process === 'undefined') {
+        window.process = { 
+          env: { 
+            API_KEY: "" // 如果系统未注入 key，初始化为空字符串防止报错
+          } 
+        };
+      }
     </script>
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?external=react",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
